fix(swiper): 修复页面中未设置 z-index 的 fixed 元素无法覆盖 swiper 问题 (#2617)

--- a/src/packages/__VUE/swiper/index.scss
+++ b/src/packages/__VUE/swiper/index.scss
@@ -1,6 +1,5 @@
 .nut-swiper {
   position: relative;
-  z-index: 1;
   display: flex;
   transition-property: transform;
   box-sizing: content-box;
